force-app/main/default/objects/Campaign/fields/FOPS_Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Channel_Type__c</fullName>
    <label>Channel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Job Board</fullName>
            </value>
            <value>
                <fullName>Recruiting Agency</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Direct Outbound</fullName>
            </value>
            <value>
                <fullName>Freelance Marketplace</fullName>
            </value>
            <value>
                <fullName>Community / Network</fullName>
            </value>
            <value>
                <fullName>Repeat Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>