force-app/main/default/objects/Campaign/fields/FOPS_Platform_URL__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Platform_URL__c</fullName>
    <label>Platform URL</label>
    <type>Url</type>
</CustomField>