force-app/main/default/objects/Campaign/fields/FOPS_Won_Contract_Value_Base__c.field-meta.xml
<CustomField>
    <fullName>FOPS_Won_Contract_Value_Base__c</fullName>
    <label>Won Contract Value (Base)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>